--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <!--, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0-->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylez.css">
     <title>Landing</title>
-    <!-- <script src="https://code.jquery.com/jquery-2.0.2.min.js"></script>-->
-
 </head>
 <body>
 <div class="block">
@@ -16,9 +13,9 @@
         <div class="b-popup-content">
             <div class="scopes">
                 <a class="closingCrossLink" href="javascript:PopUpHide()">
-                    <img src="images/ClosingСross.svg" />
+                    <img src="images/ClosingСross.svg" title="Close" alt="Close"/>
                 </a>
-                    <img class="closingCross" src="images/ClosingСross.svg" title="Close Pop-Up" />
+                    <img class="closingCross" src="images/ClosingСross.svg" title="Close Pop-Up" alt=" "/>
                 <h1 class="popUpHeader">Быстро оставить заявку</h1>
                 <p class="popUpHeaderDescription">Введите номер, мы позвоним вам в течение 10 минут в рабочее время</p>
                <p class="popUpHeaderGrafikRaboti">Пн–Пт 9:00 - 18:00, Сб 10:00 - 18:00</p>
@@ -45,18 +42,70 @@
     </div>
     <div class="wrapper">
         <div class="container">
+            <nav class="Header__menu">
+            <ul class="Header__list">
+                <img src="images/home.svg" class="homeImage" alt="Home Sweet Home"/>
+                <li>Каталог</li>
+                <li>Преимущества</li>
+                <li>Примеры работ</li>
+                <li>Монтаж</li>
+                <li>Отзывы</li>
+                <li>Ответы на вопросы</li>
+                <li class="descriptionContainer"><p class="description"><b class="boldText">Кровельные и фасадные материалы</b> в Тюмени и области. Профессиональный монтаж с 2010 года.</p>
+                </li>
+                <li class="price-catalog">
+                    <div class="pdfFile">Pdf</div>
+                    <a href="https://drive.google.com/uc?export=download&confirm=no_antivirus&id=14tlihrpXZk5mxwx1HH3RIxYGDES_Omfd" class="pdfDownloadLink">Скачать прайс-каталог</a>
+                </li>
+                <li class="answerInMessengers">
+                    <div class="answerOnlineBlock">
+                        <div class="smallDisk"></div>
+                        <span class="answerOnline">Отвечаем онлайн</span>
+                    </div>
+                    <ul class="messengers">
+                        <li class="iconDisk viber">
+                            <a title="Должен быть установлен Viber для ПК" href="viber://chat?number=+78002225460">
+                                <img class="beauty-rotate" src="images/Viber.png" title="Написать в Телеграм" alt="Viber" />
+                            </a>
+                        </li>
+                        <li class="iconDisk whatsup">
+                            <a href="https://wa.me/88002225460?text=Здравствуйте.%20Вопрос%20по%20поводу%20заказа%20кровли">
+                                <img class="beauty-rotate" src="images/Whatsup.png" title="Написать в WhatsApp" alt="Whatsup" />
+                            </a>
+                        </li>
+                        <li class="iconDisk telegram">
+                            <a href="https://t.me/nexta_tv">
+                                <img class="beauty-rotate" src="images/Telegram.png" title="Написать в Телеграм" alt="Telegram" />
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
             <header>
-                <ul class="menu-main">
-                    <img src="images/home.svg" class="homeImage" alt="Home Sweet Home"/>
-                    <li>Каталог</li>
-                    <li>Преимущества</li>
-                    <li>Примеры работ</li>
-                    <li>Монтаж</li>
-                    <li>Отзывы</li>
-                    <li>Ответы на вопросы</li>
-                    <li>Контакты</li>
-                </ul>
-                <ul class="hat">
+                <div class="header__body__mobile">
+                    <img src="./images/logo-picture.png" class="logoImage" alt="Logo" />
+                    <div class="telefonBlock">
+                        <span class="grafikRaboti"><b>Пн-Пт</b> 9:00 - 18:00, <b>Сб</b> 10:00 - 18:00</span>
+                        <a href="tel:+78142332211" class="telefon">8(800)222-54-60</a>
+                        <a href="javascript:PopUpShow()" class="callMe">Позвоните мне</a>
+                    </div>
+                    <div class="header__burger">
+                        <span></span>
+                    </div>
+
+                </div>
+                    <ul class="menu-main">
+                        <img src="images/home.svg" class="homeImage" alt="Home Sweet Home"/>
+                        <li>Каталог</li>
+                        <li>Преимущества</li>
+                        <li>Примеры работ</li>
+                        <li>Монтаж</li>
+                        <li>Отзывы</li>
+                        <li>Ответы на вопросы</li>
+                        <li>Контакты</li>
+                    </ul>
+                    <ul class="hat">
                     <li class="descriptionContainer"><p class="description"><b>Кровельные и фасадные материалы</b> в Тюмени и области.</p>
                         <p class="professional">Профессиональный монтаж с 2010 года.</p>
                     </li>
@@ -64,7 +113,7 @@
                         <div class="pdfFile">Pdf</div>
                         <a href="https://drive.google.com/uc?export=download&confirm=no_antivirus&id=14tlihrpXZk5mxwx1HH3RIxYGDES_Omfd" class="pdfDownloadLink">Скачать прайс-каталог</a>
                     </li>
-                    <img class="logoImage"src="./images/logo-picture.png"/>
+                    <li class="logoImageAdaptive"><img src="./images/logo-picture.png" class="logoImage" alt="Logo" /></li>
                     <li class="answerInMessengers">
                         <div class="answerOnlineBlock">
                             <div class="smallDisk"></div>
@@ -73,19 +122,18 @@
                         <ul class="messengers">
                             <li class="iconDisk viber">
                                 <a title="Должен быть установлен Viber для ПК" href="viber://chat?number=+78002225460">
-                                    <img class="beauty-rotate" src="images/Viber.png" title="Написать в Телеграм" />
+                                    <img class="beauty-rotate" src="images/Viber.png" title="Написать в Телеграм" alt="Viber" />
                                 </a>
                             </li>
                             <li class="iconDisk whatsup">
                                 <a href="https://wa.me/88002225460?text=Здравствуйте.%20Вопрос%20по%20поводу%20заказа%20кровли">
-                                    <img class="beauty-rotate" src="images/Whatsup.png" title="Написать в WhatsApp" />
+                                    <img class="beauty-rotate" src="images/Whatsup.png" title="Написать в WhatsApp" alt="Whatsup" />
                                 </a>
                             </li>
                             <li class="iconDisk telegram">
                                 <a href="https://t.me/nexta_tv">
-                                    <img class="beauty-rotate" src="images/Telegram.png" title="Написать в Телеграм" />
+                                    <img class="beauty-rotate" src="images/Telegram.png" title="Написать в Телеграм" alt="Telegram" />
                                 </a>
-                            </li>
                             </li>
                         </ul>
                     </li>
@@ -133,6 +181,7 @@
         </div>
     </div>
 </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="scripts/jquery.maskedinput.min.js"></script>
 <script src="scripts/script.js"></script>
