--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li>Монтаж</li>
                 <li>Отзывы</li>
                 <li>Ответы на вопросы</li>
-                <li class="descriptionContainer"><p class="description"><b class="boldText">Кровельные и фасадные материалы</b> в Тюмени и области. Профессиональный монтаж с 2010 года.</p>
+                <li class="descriptionContainer"><p class="description"><b class="boldText">Кровельные и фасадные материалы</b>в Тюмени и области. Профессиональный монтаж </br>с 2010 года.</p>
                 </li>
                 <li class="price-catalog">
                     <div class="pdfFile">Pdf</div>
@@ -145,43 +145,35 @@
             </header>
             <div class="mainContentWrapper">
                 <div class="main__content__body__mobile">
-                <h1 class="mainHeader">Продажа <b class="boldText">кровельных материалов</b> в Тюмени и Тюменской области </h1>
-                <div class="mainHeaderRounds">
-                    <div class="greenRound100"></div>
-                    <div class="greenRound75"></div>
-                    <div class="greenRound50"></div>
-                    <div class="greenRound25"></div>
-                    <p class="mainHeaderDescription">и монтаж под ключ</p>
-                </div>
-                    <img src="images/FingerPrint.jpg" alt="FingerPrint" class="fingerPrint"/>
-                    <p class="answerSomeQuestions"><b class="boldText">Ответьте на несколько вопросов и получите</b>сметную стоимость и 3 подарка за экономию нашего времени</p>
-                    <div class="backGroundCalculateTheCost">
-                        <span class="calculateTheCostButton">Рассчитать стоимость материалов и монтажа</span>
-                        <img src="images/ArrowTopRightNew.png" alt="Call Me Button" class="arrowTopRight"/>
+                    <h1 class="mainHeader">Продажа <b class="boldText">кровельных материалов</b> в Тюмени и Тюменской области </h1>
+                    <div class="mainHeaderRounds">
+                        <div class="greenRound100"></div>
+                        <div class="greenRound75"></div>
+                        <div class="greenRound50"></div>
+                        <div class="greenRound25"></div>
+                        <p class="mainHeaderDescription">и монтаж под ключ</p>
                     </div>
-                    <div class="backGroundCheckInForLookingHouses">
-                        <span class="checkInForLookingHousesButton">записаться на просмотр объектов</span>
-                        <img src="images/ArrowTopRightNew.png" alt="Call Me Button" class="arrowTopRight"/>
-                    </div>
-                    <div class="leftSidebarMobilePopup">
-                        <div class="leftSidebarMobilePopupDescriptionBlock">
-                            <div class="leftSidebarMobilePopupDescription1">
-                                <b>Гарантия от 50 лет</b> на материалы и 5 лет на монтаж
-                            </div>
-                            <div class="leftSidebarMobilePopupDescription2">Нажмите на плюсик, чтобы увидеть все преимущества работы с нами</div>
+                        <img src="images/FingerPrint.jpg" alt="FingerPrint" class="fingerPrint"/>
+                        <p class="answerSomeQuestions"><b class="boldText">Ответьте на несколько вопросов и получите</b>сметную стоимость и 3 подарка за экономию нашего времени</p>
+                        <div class="backGroundCalculateTheCost">
+                            <span class="calculateTheCostButton">Рассчитать стоимость материалов и монтажа</span>
+                            <img src="images/ArrowTopRightNew.png" alt="Call Me Button" class="arrowTopRight"/>
                         </div>
-                        <div class="RoundCross"></div>
-                    </div>
-                    <nav class="leftSidebarMobile">
-                        <ul class="leftSidebarMobileList">
-                            <li><b>Гарантия от 50 лет</b> на материалы и 5 лет на монтаж</li>
-                            <li><b>Замер, монтажный проект</b> и еще 4 услуги бесплатно</li>
-                            <li><b>Сметы точны</b> до копейки</li>
-                            <li><b>Поэтапная оплата,</b> кредит или рассрочка</li>
-                            <li><b>Наши крыши в каждом поселке</b> и дачном сообществе региона</li>
-                        </ul>
-                        <div class="RoundCross"></div>
-                    </nav>
+                        <div class="backGroundCheckInForLookingHouses">
+                            <span class="checkInForLookingHousesButton">записаться на просмотр объектов</span>
+                            <img src="images/ArrowTopRightNew.png" alt="Call Me Button" class="arrowTopRight"/>
+                        </div>
+
+                        <nav class="leftSidebarMobile">
+                            <ul class="leftSidebarMobileList">
+                                <li><b>Гарантия от 50 лет</b> на материалы и 5 лет на монтаж</li>
+                                <li><b>Замер, монтажный проект</b> и еще 4 услуги бесплатно</li>
+                                <li><b>Сметы точны</b> до копейки</li>
+                                <li><b>Поэтапная оплата,</b> кредит или рассрочка</li>
+                                <li><b>Наши крыши в каждом поселке</b> и дачном сообществе региона</li>
+                            </ul>
+                            <div class="RoundCross"></div>
+                        </nav>
                 </div>
                 <ul class="leftSidebar">
                     <li><b>Гарантия от 50 лет</b> на материалы и 5 лет на монтаж</li>
