11th version of Site: full middle addaptive

--- a/index.html
+++ b/index.html
@@ -105,42 +105,50 @@
                         <li>Контакты</li>
                     </ul>
                     <ul class="hat">
-                    <li class="descriptionContainer"><p class="description"><b>Кровельные и фасадные материалы</b> в Тюмени и области.</p>
-                        <p class="professional">Профессиональный монтаж с 2010 года.</p>
-                    </li>
-                    <li class="price-catalog">
-                        <div class="pdfFile">Pdf</div>
-                        <a href="https://drive.google.com/uc?export=download&confirm=no_antivirus&id=14tlihrpXZk5mxwx1HH3RIxYGDES_Omfd" class="pdfDownloadLink">Скачать прайс-каталог</a>
-                    </li>
-                    <li class="logoImageAdaptive"><img src="./images/logo-picture.png" class="logoImage" alt="Logo" /></li>
-                    <li class="answerInMessengers">
-                        <div class="answerOnlineBlock">
-                            <div class="smallDisk"></div>
-                            <span class="answerOnline">Отвечаем онлайн</span>
+                        <div class="hat-content1">
+                            <li class="descriptionContainer"><p class="description"><b>Кровельные и фасадные материалы</b> в Тюмени и области.</p>
+                                <p class="professional">Профессиональный монтаж с 2010 года.</p>
+                            </li>
+                            <li class="price-catalog">
+                                <div class="pdfFile">Pdf</div>
+                                <a href="https://drive.google.com/uc?export=download&confirm=no_antivirus&id=14tlihrpXZk5mxwx1HH3RIxYGDES_Omfd" class="pdfDownloadLink">Скачать прайс-каталог</a>
+                            </li>
                         </div>
-                        <ul class="messengers">
-                            <li class="iconDisk viber">
-                                <a title="Должен быть установлен Viber для ПК" href="viber://chat?number=+78002225460">
-                                    <img class="beauty-rotate" src="images/Viber.png" title="Написать в Телеграм" alt="Viber" />
-                                </a>
+                        <li class="logoImageAdaptive"><img src="./images/logo-picture.png" class="logoImageDesktop" alt="Logo" /></li>
+                        <div class="hat-content2">
+                            <li class="answerInMessengers">
+                                <div class="answerOnlineBlock">
+                                    <div class="smallDisk"></div>
+                                    <span class="answerOnline">Отвечаем онлайн</span>
+                                </div>
+                                <ul class="messengers">
+                                    <li class="iconDisk viber">
+                                        <a title="Должен быть установлен Viber для ПК"
+                                           href="viber://chat?number=+78002225460">
+                                            <img class="beauty-rotate" src="images/Viber.png" title="Написать в Телеграм"
+                                                 alt="Viber"/>
+                                        </a>
+                                    </li>
+                                    <li class="iconDisk whatsup">
+                                        <a href="https://wa.me/88002225460?text=Здравствуйте.%20Вопрос%20по%20поводу%20заказа%20кровли">
+                                            <img class="beauty-rotate" src="images/Whatsup.png" title="Написать в WhatsApp"
+                                                 alt="Whatsup"/>
+                                        </a>
+                                    </li>
+                                    <li class="iconDisk telegram">
+                                        <a href="https://t.me/nexta_tv">
+                                            <img class="beauty-rotate" src="images/Telegram.png" title="Написать в Телеграм"
+                                                 alt="Telegram"/>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
-                            <li class="iconDisk whatsup">
-                                <a href="https://wa.me/88002225460?text=Здравствуйте.%20Вопрос%20по%20поводу%20заказа%20кровли">
-                                    <img class="beauty-rotate" src="images/Whatsup.png" title="Написать в WhatsApp" alt="Whatsup" />
-                                </a>
+                            <li class="telefonBlock">
+                                <span class="grafikRaboti"><b>Пн-Пт</b> 9:00 - 18:00, <b>Сб</b> 10:00 - 18:00</span>
+                                <a href="tel:+78142332211" class="telefon">8(800)222-54-60</a>
+                                <a href="javascript:PopUpShow()" class="callMe">Позвоните мне</a>
                             </li>
-                            <li class="iconDisk telegram">
-                                <a href="https://t.me/nexta_tv">
-                                    <img class="beauty-rotate" src="images/Telegram.png" title="Написать в Телеграм" alt="Telegram" />
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="telefonBlock">
-                        <span class="grafikRaboti"><b>Пн-Пт</b> 9:00 - 18:00, <b>Сб</b> 10:00 - 18:00</span>
-                        <a href="tel:+78142332211" class="telefon">8(800)222-54-60</a>
-                        <a href="javascript:PopUpShow()" class="callMe">Позвоните мне</a>
-                    </li>
+                        </div>
                 </ul>
             </header>
             <div class="mainContentWrapper">
