--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="header__body__mobile">
                     <img src="./images/logo-picture.png" class="logoImage" alt="Logo" />
                     <div class="telefonBlock">
-                        <span class="grafikRaboti"><b>Пн-Пт</b> 9:00 - 18:00, <b>Сб</b> 10:00 - 18:00</span>
+                        <span class="grafikRaboti"><b>Пн-Пт </b>9:00 - 18:00,<b> Сб </b> 10:00 - 18:00</span>
                         <a href="tel:+78142332211" class="telefon">8(800)222-54-60</a>
                         <a href="javascript:PopUpShow()" class="callMe">Позвоните мне</a>
                     </div>
@@ -144,7 +144,7 @@
                                 </ul>
                             </li>
                             <li class="telefonBlock">
-                                <span class="grafikRaboti"><b>Пн-Пт</b> 9:00 - 18:00, <b>Сб</b> 10:00 - 18:00</span>
+                                <div class="grafikRaboti"><b>Пн-Пт </b> 9:00 - 18:00, <b> Сб </b> 10:00 - 18:00</div>
                                 <a href="tel:+78142332211" class="telefon">8(800)222-54-60</a>
                                 <a href="javascript:PopUpShow()" class="callMe">Позвоните мне</a>
                             </li>
